hide next update issue banner on mobile

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -40,6 +40,12 @@
 
 	}
 
+	.next-issue {
+
+		display: none !important;
+
+	}
+
 	.masthead {
 
 		.container {
